# video-dither

./: CMakeLists.txt  README.md
src/: argparse.cpp  argparse.hpp  concurrency.cpp  concurrency.hpp  main.cpp  video.cpp  video.hpp
